# Force-Brute-and-Quick-Sort

./: CMakeLists.txt  README.md  imprime_array.cpp  imprime_array.hpp  main.cpp  recebe_array.cpp  recebe_array.hpp  recebe_lista.cpp  recebe_lista.hpp
Brute Force/: bruteforce.cpp  bruteforce.hpp
Quick Sort/: main.cpp  particao.cpp  particao.hpp  quicksort.cpp  quicksort.hpp  troca.cpp  troca.hpp
